include ../../../Make.vars

SUBDIRS = \
	t

EXTRA_DIST =

OC_RUNTIMEFILES = \
	__init__.py \
	descriptor.py \
	error.py \
	descriptor_factory.py \
	module_descriptor.py \
	module_descriptor.yml \
	type_descriptor.py \
	type_descriptor.yml \
	rest_routine_descriptor.py \
	rest_routine_descriptor.yml \
	system_state_manager_descriptor.py \
	system_state_manager_descriptor.yml

all-local: nox-all-local
clean-local: nox-clean-local
install-exec-hook: nox-install-local
