include ../../Make.vars

SUBDIRS = t

EXTRA_DIST = \
	__init__.py

OC_RUNTIMEFILES = \
	__init__.py \
	configproto_convert.py \
	json_schema.py \
	json-schema.org_draft-03_schema.json \
	util.py

OC_PYLIBFILES =

all-local: nox-all-local
clean-local: nox-clean-local
install-exec-hook: nox-install-local
